# Service-Registry_CPP

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  settings.gradle.kts
data/: extra_auo.txt  extra_ufl.txt  init_auto_auo.txt  init_ugyfel_ufl.txt
include/: Auto.h  Gtest_lite.h  Karbantartas.h  MainSegedFuggvenyek.h  Memtrace.h  MuveletAllapot.h  SzervizNyilvantartoRendszer.h  Ugyfel.h  Vector.hpp  VegzettMuvelet.h
src/: Applikacio.cpp  Auto.cpp  MainSegedFuggvenyek.cpp  Memtrace.cpp  Teszt.cpp
src/main/cpp/: Datum.cpp  Main.cpp  Memtrace.cpp  SzervizNyilvantartoRendszer.cpp  Ugyfel.cpp
src/main/public/: Applikacio.h  Datum.h  Javitas.h  Teszt.h  Vizsga.h
